# paper_sum

./: .env.example  .gitignore  ANALYTICS_QUICK_ACCESS.md  ANALYTICS_SETUP.md  API_TUTORIAL.md  CLEANUP_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  FRONTEND_DEPLOYMENT.md  HOW_TO_VIEW_ANALYTICS.md  IMPLEMENTATION_SUMMARY.md  MONITORING_GUIDE.md  QUICKSTART.md  QUICK_DEPLOY.md  README.md  fix_state_access.py  main.py  pyproject.toml  run.py  setup.sh  test_api.py  test_clean_api.py  test_setup.py  test_simplified_api.py
app/: main.py  utils.py
app/api/: dependencies.py
app/core/: config.py
app/pipeline/: nodes.py  state.py
app/services/: pipeline_service.py
arxiv_docs/: arxiv_api.py  clean_pdfs.py
backend/: .dockerignore  .env.example  .env.local  .env.production  .gitignore  DEPLOYMENT_CHECKLIST.md  Dockerfile  Dockerfile.api  Dockerfile.pip  Dockerfile.render  README.md  RENDER_DEPLOYMENT_FIX.md  api.py  docker-compose.test.yml  docker-compose.yml  fix_imports.sh  main.py  minimal_api.py  mock_api.py  pyproject.simple.toml  pyproject.toml  render-backup.yaml  render.yaml  requirements.txt  simple_api.py  start.sh
backend/app/: __init__.py  main.py
backend/app/api/: analytics.py  dependencies.py
backend/app/core/: config.py  database.py
backend/app/models/: analytics.py  schemas.py
backend/app/pipeline/: nodes.py  state.py
backend/app/services/: database_service.py  monitoring.py  pipeline_service.py
backend/prisma/: schema.prisma
db/chroma_store/: chroma.sqlite3
frontend/: DEPLOYMENT_TEST_REPORT.md  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  deployment-checklist.sh  next.config.ts  package-lock.json  package.json  tailwind.config.ts  test-deployment.sh  tsconfig.json  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: index.ts  (+4 more)
nodes/: llm_nodes.py
outputs/: README.md
research_papers/extraacted_pdfs/: ArcMemo: Abstract Reasoning Composition with Lifelong LLM Memory.txt  ChronoGraph: A Real-World Graph-Based Multivariate Time Series Dataset.txt  Delta Activations: A Representation for Finetuned Large Language Models.txt  Low-rank matrix and tensor approximations: advancing efficiency of machine-learning interatomic potentials.txt  One Flight Over the Gap: A Survey from Perspective to Panoramic Vision.txt  Plot'n Polish: Zero-shot Story Visualization and Disentangled Editing with Text-to-Image Diffusion Models.txt  TRUST-VL: An Explainable News Assistant for General Multimodal Misinformation Detection.txt  The Telephone Game: Evaluating Semantic Drift in Unified Models.txt  Towards Cognitively-Faithful Decision-Making Models to Improve AI Alignment.txt  Virtual Fitting Room: Generating Arbitrarily Long Videos of Virtual Try-On from a Single Image -- Technical Preview.txt
(+23 files in other folders)
