[project]
name = "paper-sum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.2.0",
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.32",
    "openai>=1.106.1",
    "pymupdf>=1.26.4",
    "sentence-transformers>=5.1.0",
]
