[project]
name = "ai-paper-summarizer-backend"
version = "0.1.0"
description = "AI Paper Summarizer Backend - FastAPI backend for processing research papers"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Dieudonne", email = "contact@example.com"}
]
dependencies = [
    # FastAPI and web framework
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "starlette>=0.27.0",
    # Pydantic for data validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # LangGraph and LangChain ecosystem
    "langgraph>=0.2.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-groq>=0.1.0",
    "langchain-community>=0.2.0",
    "langchain-chroma>=0.1.0",
    "langchain-huggingface>=0.0.3",
    # Vector database and embeddings
    "chromadb>=0.4.22",
    "sentence-transformers>=2.2.2",
    # Paper processing
    "arxiv>=2.1.0",
    "pymupdf>=1.23.0",
    # Caching and monitoring
    "redis>=5.0.1",
    "structlog>=23.2.0",
    "psutil>=5.9.6",
    # Environment and utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.25.2",
    "python-multipart>=0.0.6",
    "prisma>=0.15.0",
    "psycopg2-binary>=2.9.10",
    # Database
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.11.0", 
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
    "httpx>=0.25.2",
    "pytest-mock>=3.12.0",
]

prod = [
    "gunicorn>=21.2.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "flake8>=6.0.0",
    "pre-commit>=3.5.0",
    "coverage>=7.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
